XNGTP-3936- Fix Details. When changing the Currently Shopping For, the Preferred Ship-To should not be changed. Change Ship to modal cut off on the left when called from Checkout page. IE8 only
----------------------------------- StarTeam -----------------------------------
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/order/XPEDXShipToCustomer.java:1.9
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXCustomerAssignmentAction.java:1.9
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/utilities/XPEDXWCUtils.java:1.49
M src/WebChannel/main/webapp/xpedx/css/order/ORDERS.css:1.5
--------------------------------------------------------------------------------

--- a/src/WebChannel/main/webapp/xpedx/css/order/ORDERS.css
+++ b/src/WebChannel/main/webapp/xpedx/css/order/ORDERS.css
@@ -1100,7 +1100,6 @@ span.print-ico-xpedx.item-detail { margin-top: 0px; margin-right: 15px; }
 .cont-shopping-margin#cont-shopping { margin-right: 55px; }
 .replacement-img { display: inline; padding-left:5px; }
 .copy-paste-cancel {margin-right:10px;}
-.ship-to-top .ship-to-top-left { margin-left:29px;}
 .mil-cart-bg h2
 {
 	background: transparent;
